--- a/community-tutorials/set-up-a-csgo-server/01-en.md
+++ b/community-tutorials/set-up-a-csgo-server/01-en.md
@@ -11,7 +11,7 @@ author_bio:
 tags: [shell, csgo, gameserver, linux] 
 netcup_product_url: https://www.netcup.de/bestellen/produkt.php?produkt=2951
 language: en
-available_languages: [de, en]
+available_languages: [en]
 ---
 
 # Introduction
