--- a/community-tutorials/set-up-a-csgo-server/01-en.md
+++ b/community-tutorials/set-up-a-csgo-server/01-en.md
@@ -19,6 +19,8 @@ In this tutorial, you will learn how to set up a Counter-Strike: Global Offensiv
 
 Before you begin, please make sure you have a netcup server with the appropriate resources to handle a game server. It's recommended to have a vServer or dedicated server with sufficient CPU, RAM, and bandwidth for smooth gameplay experience. Although the VPS 200 G10s should suffice for a few players, it is more advisable to go for the VPS 500 G10s due to more RAM and CPU cores.
 
+This tutorial covers a baremetal install. You can also check out this tutorial [insert link to docker-csgo] to find out how to set up CS:GO in a Docker Container.
+
 # Requirements
 - A netcup server (vServer or dedicated server)
 - Basic knowledge of working with Linux command line.
@@ -132,3 +134,26 @@ Before you begin, please make sure you have a netcup server with the appropriate
 Congratulations! You have successfully set up a CSGO server on your netcup server. You can now invite your friends or community members to join and enjoy the game. Remember to maintain your server by keeping it updated, monitoring for any issues, and adjusting the configuration based on your preferences and player feedback.
 
 Feel free to explore advanced server configuration options and plugins to further customize your CSGO server. Enjoy playing and hosting exciting matches on your own dedicated server!
+
+# Licence
+
+[MIT](https://github.com/netcup-community/community-tutorials/blob/main/LICENSE)
+
+Copyright (c) 2023 Merlin Glander
+
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicence, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+
+# Contributor's Certificate of Origin
+By making a contribution to this project, I certify that:
+
+ 1) The contribution was created in whole or in part by me and I have the right to submit it under the licence indicated in the file; or
+
+ 2) The contribution is based upon previous work that, to the best of my knowledge, is covered under an appropriate licence and I have the right under that licence to submit that work with modifications, whether created in whole or in part by me, under the same licence (unless I am permitted to submit under a different licence), as indicated in the file; or
+
+ 3) The contribution was provided directly to me by some other person who certified (a), (b) or (c) and I have not modified it.
+
+ 4) I understand and agree that this project and the contribution are public and that a record of the contribution (including all personal information I submit with it, including my sign-off) is maintained indefinitely and may be redistributed consistent with this project or the licence(s) involved.
