--- a/community-tutorials/set-up-a-csgo-server/01-en.md
+++ b/community-tutorials/set-up-a-csgo-server/01-en.md
@@ -1,7 +1,7 @@
 ---
-title: Setup and use a CS:GO gameserver
-description: Learn how to set up a gameserver for Counter-Strike:Global Offensive.
-level: beginner
+title: Setup and use a bare-metal CS:GO gameserver
+description: Learn how to set up a gameserver for Counter-Strike: Global Offensive.
+level: [beginner]
 updated_at: 2023-05-27
 slug: setup-a-csgo-server
 author_name: Merlin Glander
@@ -24,6 +24,7 @@ This tutorial covers a baremetal install. You can also check out this tutorial [
 # Requirements
 - A netcup server (vServer or dedicated server)
 - Basic knowledge of working with Linux command line.
+- A Debian-based operating system on the server. (It is usually easier to get stuff running under Ubuntu, but Ubuntu requires more overhead)
 
 
 # Step 1 - Install SteamCMD
