--- a/community-tutorials/set-up-a-csgo-server/01-en.md
+++ b/community-tutorials/set-up-a-csgo-server/01-en.md
@@ -1,7 +1,7 @@
 ---
 title: Setup and use a bare-metal CS:GO gameserver
-description: Learn how to set up a gameserver for Counter-Strike: Global Offensive.
-level: beginner
+description: Learn how to set up a gameserver for Counter-Strike:Global Offensive.
+level: [beginner]
 updated_at: 2023-05-27
 slug: setup-a-csgo-server
 author_name: Merlin Glander
