--- a/community-tutorials/set-up-a-csgo-server/01-en.md
+++ b/community-tutorials/set-up-a-csgo-server/01-en.md
@@ -24,7 +24,7 @@ This tutorial covers a baremetal install. You can also check out this tutorial [
 # Requirements
 - A netcup server (vServer or dedicated server)
 - Basic knowledge of working with Linux command line.
-- A Debian-based operating system on the server. (It is usually easier to get stuff running under Ubuntu, but Ubuntu requires more overhead)
+- A Debian-based operating system on the server. (It is usually easier to get stuff running under Ubuntu, while Debian is more efficient)
 
 
 # Step 1 - Install SteamCMD
