--- a/community-tutorials/set-up-a-csgo-server/01-en.md
+++ b/community-tutorials/set-up-a-csgo-server/01-en.md
@@ -36,11 +36,45 @@ This tutorial covers a baremetal install. You can also check out this tutorial [
      ```
      sudo apt update
      ```
-   - Install SteamCMD:
-     ```
-     sudo apt install steamcmd
-     ```
-   
+     
+Adding the non-free Area to Repositories
+
+To install the steamcmd package, we need to add the non-free area to the repositories in your sources list. Follow these steps to modify the `/etc/apt/sources.list` file:
+
+1. Open the sources list file in a text editor:
+   ```
+   sudo nano /etc/apt/sources.list
+   ```
+
+2. Locate the existing `deb` and `deb-src` lines and add "non-free" at the end of each line. Here's an example:
+   ```
+   deb http://mirrors.linode.com/debian stretch main non-free
+   deb-src http://mirrors.linode.com/debian stretch main non-free
+   ```
+
+3. Save the file and exit the text editor (Ctrl+O, Ctrl+X in nano).
+
+4. Add the i386 architecture and update the package list:
+   ```
+   sudo dpkg --add-architecture i386
+   sudo apt update
+   ```
+
+5. Install steamcmd:
+   ```
+   sudo apt-get install steamcmd
+   ```
+
+   Note: During the installation process, a window may appear asking for confirmation. Press `shift + tab` to select the "OK" option and proceed.
+
+6. Create a symlink to the steamcmd executable in a convenient location, such as your home directory:
+   ```
+   cd ~
+   ln -s /usr/games/steamcmd steamcmd
+   ```
+
+Now you have successfully added the non-free area to your repositories, installed steamcmd, and created a symlink to the steamcmd executable. You can proceed with the rest of the CSGO server setup.
+     
 # Step 2 - Create a Dedicated User
    
    It's recommended to create a dedicated user for running the CSGO server. This improves security and separates game server files from system files. Follow these steps to create a new user:
