--- a/community-tutorials/set-up-a-csgo-server/01-en.md
+++ b/community-tutorials/set-up-a-csgo-server/01-en.md
@@ -37,7 +37,7 @@ This tutorial covers a baremetal install. You can also check out this tutorial [
      sudo apt update
      ```
      
-Adding the non-free Area to Repositories
+### Adding the non-free Area to Repositories
 
 To install the steamcmd package, we need to add the non-free area to the repositories in your sources list. Follow these steps to modify the `/etc/apt/sources.list` file:
 
