--- a/community-tutorials/set-up-a-csgo-server/01-en.md
+++ b/community-tutorials/set-up-a-csgo-server/01-en.md
@@ -48,8 +48,8 @@ To install the steamcmd package, we need to add the non-free area to the reposit
 
 2. Locate the existing `deb` and `deb-src` lines and add "non-free" at the end of each line. Here's an example:
    ```
-   deb http://mirrors.linode.com/debian stretch main non-free
-   deb-src http://mirrors.linode.com/debian stretch main non-free
+   deb http://deb.debian.org/debian bullseye main non-free
+   deb-src http://deb.debian.org/debian bullseye main non-free
    ```
 
 3. Save the file and exit the text editor (Ctrl+O, Ctrl+X in nano).
