--- a/community-tutorials/set-up-a-csgo-server/01-en.md
+++ b/community-tutorials/set-up-a-csgo-server/01-en.md
@@ -106,11 +106,10 @@ Now you have successfully added the non-free area to your repositories, installe
    - Create a directory to store the CSGO server files:
      ```
      mkdir csgo-server
-     cd csgo-server
      ```
    - Download and install the CSGO server using SteamCMD:
      ```
-     steamcmd +login anonymous +force_install_dir ./csgo-server +app_update 740 validate +quit
+     steamcmd +force_install_dir ./csgo-server/ +login anonymous +app_update 740 validate +quit
      ```
    - Wait for the installation to complete. This may take some time depending on your server's resources and network speed.
 
